# raytracecpp_proj

./: .gitignore  README.md
homeworks/: README.md
labs/: README.md  bst.cpp  stats.cpp
project/docs/: proj_proposal
project/src/: CMakeLists.txt  config.xml  config2.xml
project/src/lib/: CMakeLists.txt
project/src/src/: CMakeLists.txt  camera.hpp  geometry.cpp  geometry.hpp  main.cpp  mymathlib.cpp  mymathlib.hpp  scene_hierarchy.cpp  scene_hierarchy.hpp  solids.cpp  solids.hpp
